force-app/main/default/objects/Action_Plan_Template_Item__c/Action_Plan_Template_Item__c.object-meta.xml
<CustomObject>
    <label>Action Plan Template Item</label>
    <nameField>
        <displayFormat>APTI-{0000}</displayFormat>
        <label>Action Plan Template Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plan Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>