force-app/main/default/objects/Action_Plan_Template_Item__c/fields/Action_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Template__c</fullName>
    <label>Action Plan Template</label>
    <referenceTo>Action_Plan_Template__c</referenceTo>
    <relationshipLabel>Action Plan Template Items</relationshipLabel>
    <relationshipName>Action_Plan_Template_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>