force-app/main/default/objects/Action_Plan_Template_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Item</fullName>
            </value>
            <value>
                <fullName>Targets</fullName>
            </value>
            <value>
                <fullName>MktShare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>